--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -32,20 +32,20 @@ body{
     background-color: white;
 }
 
-.step::before{
+#progress{
     content: '';
-    width: 100%;
+    width: 0%;
     height: 4px;
-    background-color: #E0E0E0;
+    background-color: #3498DB;
     position: absolute;
     z-index: -99;
     left: 0px;
 }
 .step::after{
     content: '';
-    width: 0%;
+    width: 100%;
     height: 4px;
-    background-color: #3498DB;
+    background-color: #E0E0E0;
     position: absolute;
     z-index: -99;
     left: 0px;
@@ -75,3 +75,10 @@ button:disabled{
     cursor: no-drop;
 }
 
+button:active{
+    transform: scale(0.98);
+}
+
+.circle-active{
+    border-color: #3498DB;
+}
